- Initial api call for categories and posts on app loading finished. - react-router-dom installed with initial root and page not found routes added. - Divided up sass files to be a little cleaner so each component has it's own file. - Created a containers folder for App.js so 'smarter' components live there and the others in components.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "npm-run-all": "^4.1.2",
+    "is-fullwidth-code-point": "^2.0.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.6",
@@ -13,8 +13,10 @@
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
+    "node-sass": "^4.7.2",
     "node-sass-chokidar": "0.0.3",
-    "react-scripts": "1.0.13"
+    "npm-run-all": "^4.1.2",
+    "react-scripts": "^1.0.13"
   },
   "scripts": {
     "build-css": "node-sass-chokidar src/ -o src/",
